@@ -41,6 +41,7 @@ extern "C" {
 #endif
 
 err_t slipif_init(struct netif * netif);
+void slipif_poll(struct netif *netif);
 
 #ifdef __cplusplus
 }
